foodteacher-manifest/be-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: be
  namespace: be
  labels:
    app: be
spec:
  selector:
    app: be
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 8000
  type: NodePort
