foodteacher-manifest/external-name-be.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
  name: be-external
spec:
  type: ExternalName

  # {Service Name}.{Namespace}.svc.cluster.local 형식으로 작성
  externalName: be.be.svc.cluster.local
