foodteacher-manifest/external-name-fe.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
  name: fe-external
spec:
  type: ExternalName

  # {Service Name}.{Namespace}.svc.cluster.local 형식으로 작성
  externalName: fe.fe.svc.cluster.local
