foodteacher-manifest/fe-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: fe
  labels:
    app: fe
  namespace: fe
spec:
  selector:
    app: fe
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 3000
  type: NodePort
